# milis-gtk-theme

./: README.md  papirus_renk_degis.py
Papirus/: icon-theme.cache
Papirus-Dark/: icon-theme.cache
Papirus-Light/: icon-theme.cache
_calisma/gtk-2.0-acik/: gtkrc
_calisma/gtk-2.0-koyu/: gtkrc  panel.rc
_calisma/gtk-3.0/: _colors-public.scss  _colors.scss  _common.scss  gtk-contained-dark.css  gtk-contained.css
_calisma/xfwm4-acik/: themerc
_calisma/xfwm4-koyu/: themerc
editor-renkleri/: Monokai.colorscheme  Xresources  nereye-atılacak
gtk-2.0/: gtkrc
gtk-3.0/: _colors.scss  gtk-contained-dark.css  gtk-contained.css
i3-config/: config
lightdm/: lightdm-gtk-greeter.conf
lightdm-acik/: lightdm-gtk-greeter.conf
lightdm-koyu/: lightdm-gtk-greeter.conf
milis-simge/: index.theme
milis-tema-acik/gtk-2.0/: gtkrc
milis-tema-acik/gtk-3.0/: gtk.css
milis-tema-acik/xfwm4/: themerc
milis-tema-koyu/: index.theme
milis-tema-koyu/gtk-2.0/: gtkrc  panel.rc
milis-tema-koyu/gtk-3.0/: gtk.css
milis-tema-koyu/xfwm4/: themerc
playmount-milis/milis-acik/: Makefile.am  milis-acik.plymouth  milis-acik.plymouth.in  milis-acik.script
playmount-milis/milis-koyu/: milis-koyu.plymouth  milis-koyu.plymouth.in  milis-koyu.script
